pingvin-share/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pingvin-share
  namespace: app-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pingvin-share
  template:
    metadata:
      labels:
        app: pingvin-share
    spec:
      containers:
        - name: pingvin-share
          image: ghcr.io/stonith404/pingvin-share:v1.13
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: data
              mountPath: /opt/app/backend/data
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 1000m
              memory: 1024Mi
          livenessProbe:
            tcpSocket:
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 30
          readinessProbe:
            tcpSocket:
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: pingvin-share-data
