pingvin-share/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pingvin-share
  namespace: app-dev
spec:
  selector:
    app: pingvin-share
  ports:
    - port: 80
      targetPort: 3000
