pingvin-share/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: pingvin-share
  namespace: app-dev
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`pingvin.lab-hc.cloud`)
      kind: Rule
      services:
        - name: pingvin-share
          port: 80
